@@ -7,6 +7,8 @@ v4.14 ??? 2012
   - Added the /VirtualErrorHandler/ class annotation.
   - Added the /NoVirtualErrorHandler/ and /VirtualErrorHandler/ function
     annotations.
+  - SIP_PLATFORM_* and SIP_TIMELINE_* preprocessor symbols are generated
+    corresponding to the '-t' arguments passed on the command line.
   - Deprecated sipTransferBreak().
   - For Python v2.x unsigned short and unsigned char (when used as a byte) are
     now converted to int, rather than long, objects.
